# nfse_cruzamento_dados

./: .gitignore  README.md  dados_pref_tratados.csv  pyproject.toml  script.py
src/nfse_analises/: etl.py  pipeline.py
